--- a/2020.md
+++ b/2020.md
@@ -6,3 +6,10 @@
 - 签订酷划入职合同、薪资确认单
 - 送审模式下隐藏点赞功能(淘金号、刷视频、分红视频)
 
+### 2020.03.17
+
+- 上午项目需求会议
+- 完成淘金号、分红视频送审tab的替换
+- 多次打包操作
+- 研究新需求`draw视频点击率优化的实现`
+
