--- a/2020.md
+++ b/2020.md
@@ -23,5 +23,25 @@
 
 - 完成淘金号、快刷视频、分红视频draw视频点击率优化功能
 - 完成淘金号、快刷视频、分红视频接入快手draw视频广告sdk功能
-
 - 尝试解决刮奖模块点击返回逻辑的bug
+
+### 2020.03.20
+
+- 今天发版失败，知道晚上11点半依然未完成发版，发版失败原因总结如下：
+  - 原有发版流程混乱，已无法知晓上次发版commit id
+  - 首次开发，未完全理解部分代码逻辑，默认原有逻辑是正确的(大坑)
+  - 分支管理混乱，代码提交不规范来回切换代码，浪费大量时间(同事)
+  - git使用不熟悉，不知道commit之间的切换(reset、revert、cherry-pick等命令的使用)(同事)
+
+### 2020.03.20
+
+- 修改动画偶尔无法显示的问题，修改原有代码添加奖励逻辑错误问题
+- 清理gitlab分支
+- 创建新分支，梳理新开发、发版流程
+- 配置jenkins
+- 研究配置gitlab merge method 为fast-forward
+
+### 2020.03.20
+
+- 旧版gitlab不支持配置merge method，将代码切换到新版gitlab上
+- 修改bugly上的异常，由于之前发版未上传mapping文件，导致异常信息无法完整显示，修改bug只能靠猜。。。
