--- a/2020.md
+++ b/2020.md
@@ -45,3 +45,38 @@
 
 - 旧版gitlab不支持配置merge method，将代码切换到新版gitlab上
 - 修改bugly上的异常，由于之前发版未上传mapping文件，导致异常信息无法完整显示，修改bug只能靠猜。。。
+
+### 2020.03.21
+
+- 整理各分支代码，封板
+- 完成***分红视频​***首页分红奖励功能逻辑的修改，重新整理代码
+- 打包发版
+
+### 2020.03.23
+
+- 修复线上crash
+- 重新打包发版4.0.9.2
+- 完成首页限时分红弹窗显示逻辑，由后端接口控制
+
+### 2020.03.24
+
+- 根据4.0.9.2上线情况，修改线上crash
+
+### 2020.03.25
+
+- 继续修复线上crash
+- 已提离职申请
+
+### 2020.03.26
+
+- 修改分红视频限时分红首页限时逻辑
+- 修改分红视频个人主页限时分红显示逻辑
+- 更换个别图标
+
+### 2020.03.27
+
+- 修改限时分红本期修改的小bug
+- 隐藏首次登陆时的弹窗
+- 完成分红视频4.0.9.4版本的发版
+- 办理离职手续，结束酷划在线工作
+
