--- a/2020.md
+++ b/2020.md
@@ -80,3 +80,14 @@
 - 完成分红视频4.0.9.4版本的发版
 - 办理离职手续，结束酷划在线工作
 
+
+
+# 以下为入职米搭天下工作记录
+
+### 2020.03.30
+
+- 上午开通邮箱、代码仓库、石墨等账号
+- 阅读产品文档(写的很优秀)，梳理产品逻辑
+- 整理面试题目
+- 面试候选人
+- 根据bug list梳理代码逻辑，确定分支情况
