--- a/2020.md
+++ b/2020.md
@@ -91,3 +91,14 @@
 - 整理面试题目
 - 面试候选人
 - 根据bug list梳理代码逻辑，确定分支情况
+
+### 2020.03.31
+
+- 筛选简历
+- 面试~~王浩杰~~、徐亮波
+- 修复两个crash的问题，研究一个选择附件简历后出现闪退的问题（暂未解决）
+- 添加js与android交互的JSBridge，提供获取token和跳转登陆界面功能
+- 啊，又到十点半了
+
+
+
