--- a/2020.md
+++ b/2020.md
@@ -100,5 +100,11 @@
 - 添加js与android交互的JSBridge，提供获取token和跳转登陆界面功能
 - 啊，又到十点半了
 
+### 2020.04.01
+
+- 面试杨政仁
+- 配合天宇调试h5页面，添加打开上传头像、修改名称等页面的js接口
+- 临时修复jp分支上fragment back后重新创建的问题（**目前是使用add替代replace的方式，wjp-dev上是replace但是不会重新创建，这个有待研究，暂时估计是fragmentManager版本不一致的问题**）
+
 
 
